namespaces/live.cloud-platform.service.justice.gov.uk/laa-information-exchange-development/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laa-information-exchange-development
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-ops-team"
    cloud-platform.justice.gov.uk/application: "Information Exchange"
    cloud-platform.justice.gov.uk/owner: "LAA OPS: laa_ops@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-infox-application"
    cloud-platform.justice.gov.uk/team-name: "laa-aws-infrastructure"
    cloud-platform.justice.gov.uk/review-after: ""
