namespaces/live.cloud-platform.service.justice.gov.uk/laa-information-exchange-development/04-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: laa-information-exchange-development
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 35.178.209.113/32, 3.8.51.207/32, 35.177.252.54/32, 13.43.9.198/32, 18.132.208.127/32, 13.42.163.245/32 
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: laa-information-exchange-development
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: ingress-controllers # This allows all traffic since all traffic comes in via the ingress controller, ipBlocks here does not work
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 443
